# lightnote-rtic

./: Cargo.toml  Makefile.toml  build.rs  create_blank_disk.sh  create_disk.sh  memory.x  test_contiguous.sh
.cargo/: config.toml
scripts/: format_lightnote.sh  test_contiguous.sh  test_dd.sh  test_speed.sh
src/: config.rs  disk.img  display.rs  errors.rs  flash.rs  main.rs  nvm.rs  usb.rs  voltage.rs
