[package]
authors = ["Javier Cardona <javier@cardonabits.com>"]
edition = "2021"
readme = "README.md"
name = "lightnote-rtic"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-graphics = "0.7.1"
#epd-waveshare = "0.5.0"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git", rev = "f98c12160fe211d2cc83188419a9ec4e855c789d" }
format_no_std = "1.0.0"
hex-display = "0.3.0"
int-enum = { version = "0.5.0", default-features = false }
lps22hb = "0.1.0"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtic = { version = "2.0.1", features = ["cortex-m", "thumbv6-backend" ] }
rtic-sync = "1.0.2"
rtt-target = "0.4.0"
shared-bus = { version = "0.3.1", features = ["cortex-m"] }
shared-bus-rtic = { version = "0.2.2", features = ["cortex-m", "thumbv6"] }
shtcx = "0.11.0"
spi-memory = "0.2.0"
static_assertions = "1.1.0"
stm32l0xx-hal = { version = "0.10.0", features = ["stm32-usbd", "mcu-STM32L072CBTx", "rt"]}
u8g2-fonts = "0.2.0"
usb-device = { version = "0.2.9", features = ["control-buffer-256"] }
usbd-dfu = "0.3.1"
usbd-storage = { version = "0.1.0", features = ["bbb", "scsi", "defmt"] }
usbd-webusb = "1.0.2"
usbd_scsi = "0.1.0"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "lightnote-rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
